name:                CnD
version:             0.0
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  hs-source-dirs:      src
  exposed-modules:     CnD
                     , UI.PickLevel
                     , UI.Game
  build-depends:       base >= 4.7 && < 5
                     , brick
                     , containers
                     , lens
                     , extra
                     , linear
                     , random
                     , transformers
                     , vty
  default-language:    Haskell2010

executable CnD
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base >= 4.7 && < 5
                     , directory
                     , filepath
                     , optparse-applicative
                     , CnD
  default-language:    Haskell2010

test-suite CnD-test
  type: exitcode-stdio-1.0
  main-is: test.hs
  hs-source-dirs: test
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:   base >= 4.7 && < 5
                  , brick
                  , containers
                  , lens
                  , extra
                  , linear
                  , random
                  , transformers
                  , vty
                  , HUnit
                  , CnD

  default-language: Haskell2010
